# powerfit

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  environment.yaml  pyproject.toml
.github/workflows/: ci.yml  python-publish.yml
docs/: conf.py  index.rst  module.rst
docs/examples/: powerlaw_shrink.py
powerfit/: __init__.py
tests/: test_basic.py
